# context-forge

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  test_bench_assembly.py  test_bench_cache.py  test_bench_memory.py
configs/: conversation_policy.yaml  cost_optimization_policy.yaml  default_policy.yaml  multi_agent_policy.yaml  rag_policy.yaml  security_policy.yaml
examples/: README.md  _shared.py  budget_manager_demo.py  cache_demo.py  compress_demo.py  observability_demo.py  quickstart.py  routing_demo.py  sanitize_demo.py  scenario_conversation_memory.py  scenario_multi_agent.py  scenario_rag_quality.py  scenario_routing_cost.py  scenario_security_compliance.py  scenario_versioning.py
scripts/: setup_dev.ps1  setup_dev.sh
src/context_forge/: __init__.py  facade.py  facade_observability.py
src/context_forge/antipattern/: __init__.py  base.py  detector.py  rules.py
src/context_forge/budget/: __init__.py  bidding.py  manager.py  strategies.py
src/context_forge/cli/: __init__.py  app.py  cmd_build.py  cmd_diff.py  cmd_init.py  cmd_inspect.py  cmd_serve.py  cmd_validate.py  server.py  utils.py
src/context_forge/compress/: __init__.py  base.py  dedup.py  engine.py  summary.py  truncation.py
src/context_forge/config/: __init__.py  defaults.py  loader.py  schema.py
src/context_forge/errors/: __init__.py  exceptions.py
src/context_forge/integrations/: __init__.py
src/context_forge/observability/: __init__.py  diff.py  golden_set.py  metrics.py  snapshot.py  tracing.py
src/context_forge/pipeline/: __init__.py  allocate.py  assemble.py  base.py  compress_stage.py  normalize.py  rerank.py  sanitize_stage.py
src/context_forge/plugins/: __init__.py
src/context_forge/routing/: __init__.py  base.py  complexity.py  context_bus.py  llm_router.py  rule_based.py
src/context_forge/sanitize/: __init__.py  base.py  html_stripper.py  injection_detector.py  length_guard.py  pii_redactor.py  unicode_normalizer.py
src/context_forge/tokenizer/: __init__.py  fallback.py  protocol.py  registry.py  tiktoken_counter.py
tests/: conftest.py
tests/integration/: test_compress_integration.py  test_facade_e2e.py  test_full_pipeline.py  test_round3_complete.py  test_serve.py
tests/unit/: test_antipattern.py  test_budget.py  test_cache.py  test_cache_coverage.py  test_cache_integration.py  test_cli.py  test_cli_coverage.py  test_cli_server.py  test_compress.py  test_compress_summary.py  test_config.py  test_config_loader_coverage.py  test_coverage_gaps.py  test_errors.py  test_facade.py  test_facade_complete.py  test_models.py  test_observability.py  test_pipeline.py  test_rolling_summary.py  test_routing.py  test_sanitize_module.py  test_smoke.py  test_tokenizer.py
